--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -45,4 +45,32 @@
         <item>com.google.android.setupwizard/com.google.android.setupwizard.time.DateTimeCheck</item>
         <item>com.google.android.setupwizard/com.google.android.setupwizard.carrier.ActivationActivity</item>
     </string-array>
+     
+     <!-- Hardware keys present on the device, stored as a bit field.
+          This integer should equal the sum of the corresponding value for each
+          of the following keys present:
+              1 - Home
+              2 - Back
+              4 - Menu
+              8 - Assistant (search)
+             16 - App switch
+             32 - Camera
+             64 - Volume rocker
+          For example, a device with Home, Back and Menu keys would set this
+          config to 7. -->
+     <integer name="config_deviceHardwareKeys">83</integer>
+     
+     <!-- Button Backlight -->
+     <bool name="config_button_brightness_support">true</bool>
+
+    <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
+    in hardware. -->
+    <bool name="config_setColorTransformAccelerated">true</bool>
+
+     <!-- Doze: should the TYPE_PICK_UP_GESTURE sensor be used as a pulse signal. -->
+    <bool name="config_dozePulsePickup">true</bool>
+
+    <!-- AlwaysOnDisplay  -->
+    <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
+     
 </resources>
